added a section for disclaimer

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,10 @@ body {
   margin-bottom: 20px;
 }
 
+.disclaimer {
+  text-align: center
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
