--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,12 @@ body {
   /* text-align: center; */
 }
 
+.map-title {
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bolder;
+}
+
 .extra-padding {
   margin: 40px;
 }
